Fixed small warnings